<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_exercises">

    <fragment
        android:id="@+id/nav_exercises"
        android:name="nodo.crogers.exercisereminders.ui.exercises.ExercisesFragment"
        android:label="@string/menu_exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/nav_alarms"
        android:name="nodo.crogers.exercisereminders.ui.alarms.AlarmsFragment"
        android:label="@string/menu_alarms"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/nav_about"
        android:name="nodo.crogers.exercisereminders.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>